# StateMe

./: CMakeLists.txt  branch.cpp  branch.h  condition.cpp  condition.h  graph.cpp  graph.h  main.cpp  register.cpp  register.h  serializeable.h  state.cpp  state.h
